# tensor-logic-ai-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/tensorlogic/: __init__.py  backend.py  core.py  logic.py  nn.py
src/tensorlogic/demos/: family_tree.py  mlp_demo.py
tests/: conftest.py  test_core.py  test_logic_family.py  test_logic_fixpoint.py  test_nn_integration.py  test_nn_mlp.py
