[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensor-logic-ai-pytorch"
version = "0.1.0"
description = "Minimal Tensor Logic AI engine in PyTorch – Datalog reasoning and neural networks as tensor programs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
